<resources>
    <string name="app_name">MySql</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ip_address_et_hint">IP address</string>
    <string name="port_et_hint">Port</string>
    <string name="database_name_et_hint">Database</string>
    <string name="user_et_hint">User</string>
    <string name="password_et_hint">Password</string>
    <string name="add_connection_toolbar_title">Add connection</string>
    <string name="save">save</string>
    <string name="edit">Edit</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="connect">Connect</string>
    <string name="cancel">Cancel</string>
    <string name="checking_connection">Checking connection…</string>
    <string name="done">Done</string>
    <string name="databases">Databases</string>
    <string name="tables">Tables</string>
    <string name="query">Query</string>
    <string name="delete_all_connections">Delete all connections</string>
    <string name="add_connection">Add connection</string>
    <string name="this_field_cannot_be_empty">This field cannot be empty!</string>
</resources>